<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snackBarView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.Auth.ConfirmOtpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="180dp"
                android:layout_height="140dp"
                android:layout_marginTop="?android:attr/actionBarSize"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/applogo" />

            <TextView
                android:id="@+id/signup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appLogo"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/verify_mobile_no"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:id="@+id/otpHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_text"
                android:layout_marginStart="@dimen/dimen_50sp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_50sp"

                android:gravity="center"
                android:textSize="@dimen/dimen_14sp" />


            <com.alimuzaffar.lib.pin.PinEntryEditText
                android:id="@+id/txt_pin_entry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/otpHeading"
                android:layout_marginStart="@dimen/dimen_50sp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_50sp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:paddingTop="@dimen/dimen_30sp"
                android:textColor="@color/colorPrimary"
                android:textIsSelectable="false"
                app:pinAnimationType="fromBottom"
                app:pinBackgroundDrawable="@drawable/edt_bg_selector" />

            <TextView
                android:id="@+id/timeRemainingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_pin_entry"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:textSize="@dimen/dimen_14sp" />


            <RelativeLayout
                android:id="@+id/submit_button_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40sp"
                android:layout_below="@+id/timeRemainingText"
                android:layout_marginStart="@dimen/dimen_50sp"
                android:layout_marginEnd="@dimen/dimen_50sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/otpConfirmButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonbackgroundenabled"
                        android:text="@string/verify_otp"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/dimen_14sp" />


                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressHud"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/resendOtpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/submit_button_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginBottom="?android:attr/actionBarSize"

                android:text="@string/didn_t_recieved_otp_try_again"
                android:textColor="@color/backgroundColor"
                android:textSize="@dimen/dimen_14sp" />


        </RelativeLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>