<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/snackBarView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.Profile.AddContactsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?android:attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/profileLogoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar_background"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/hamburgerIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/dimen_10dp"
                    android:src="@drawable/ic_dehaze_white_24dp" />

                <ImageView
                    android:id="@+id/appLogo"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:padding="@dimen/dimen_14sp"
                    android:background="@drawable/imageview_background_circle"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/applogo" />

                <!--<TextView-->
                <!--android:id="@+id/logoText"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/appLogo"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:fontFamily="@font/raleway_regular"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/tagline"-->
                <!--android:textAllCaps="true"-->
                <!--android:layout_marginBottom="@dimen/dimen_10dp"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:textSize="@dimen/dimen_14sp" />-->


                <Button
                    android:id="@+id/skipButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/skip"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dimen_14sp" />

            </RelativeLayout>


            <TextView
                android:id="@+id/emergency_informative_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileLogoLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/dimen_40sp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_40sp"
                android:gravity="center"
                android:text="@string/select_contacts_reason"
                android:textColor="@color/toolbar_background_color"
                android:textSize="@dimen/dimen_14sp" />

            <TextView
                android:id="@+id/openContactsButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_40sp"
                android:layout_below="@+id/emergency_informative_text"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/buttonbackgroundenabled"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/open_contacts"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dimen_14sp"
                android:theme="@style/MyAppbarTheme" />

            <ImageView
                android:id="@+id/howItWorksText"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_40sp"
                android:layout_below="@+id/emergency_informative_text"
                android:src="@drawable/ic_info_outline_black_24dp"
                android:padding="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:contentDescription="@string/app_name"
                android:background="?android:attr/selectableItemBackground"
                android:layout_toEndOf="@+id/openContactsButton"
                android:theme="@style/MyAppbarTheme" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/contactslist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/openContactsButton"
                android:layout_marginStart="@dimen/dimen_40sp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_40sp"
                android:layoutAnimation="@anim/layout_animation_bottom"
                android:scrollbarSize="@dimen/dimen_5dp"
                android:scrollbarThumbVertical="@color/colorAccent"
                android:scrollbars="vertical" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/dimen_40sp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_40sp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_46dp"
                android:layout_gravity="end"
                android:background="@drawable/buttonbackgroundenabled"
                android:elevation="@dimen/dimen_10dp"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dimen_14sp" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressHud"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>